# swipe-dotaznik

./: .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  stress_test.py
deploy/: Caddyfile  docker-compose.dev.yml  docker-compose.prod.yml
julca_bakalarka/: __init__.py  __main__.py  log.py  piccolo_conf.py  settings.py
julca_bakalarka/db/: app_conf.py
julca_bakalarka/db/dao/: __init__.py  dummy_dao.py  question_dao.py  response_dao.py  session_dao.py
julca_bakalarka/db/migrations/: julca_bakalarka_db_2026_03_25t22_35_34_291274.py  julca_bakalarka_db_2026_03_27t10_06_52_615165.py  julca_bakalarka_db_2026_03_27t10_27_58_336992.py  julca_bakalarka_db_2026_04_01t22_16_43_733294.py  julca_bakalarka_db_2026_04_09t12_00_00_000000.py
julca_bakalarka/db/models/: __init__.py  question_model.py  response_model.py  session_model.py
julca_bakalarka/services/: __init__.py
julca_bakalarka/static/css/: admin.css  survey.css
julca_bakalarka/static/js/: admin.js  survey.js
julca_bakalarka/templates/: base.html
julca_bakalarka/templates/admin/: dashboard.html  question_form.html
julca_bakalarka/templates/survey/: done.html  instructions.html  question.html  start.html
julca_bakalarka/web/: __init__.py  application.py  lifespan.py
julca_bakalarka/web/api/: __init__.py  router.py
julca_bakalarka/web/api/admin/: __init__.py  auth.py  schema.py  views.py
julca_bakalarka/web/api/docs/: __init__.py
julca_bakalarka/web/api/monitoring/: __init__.py
julca_bakalarka/web/api/survey/: __init__.py  schema.py  views.py
julca_bakalarka/web/pages/: __init__.py  admin_pages.py  survey_pages.py
tests/: __init__.py  conftest.py  test_admin_api.py  test_admin_auth.py  test_export_csv.py  test_julca_bakalarka.py  test_question_dao.py  test_response_dao.py  test_session_dao.py  test_survey_api.py
